5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3997/executions/1671_1107.log
== TEST (2019-04-29 13:00:15) 
-- CODE:
d = int(input("Qual o dia? "))

if(( d>=0 and d<= 6)):
	j = int(input("Quantos dias? "))
	d1 = (d + j)% 7
	if (d == 0):
		d = "domingo"
	elif (d == 1):
		d ="segunda"
	elif (d == 2):
		d = "terca"
	elif (d == 3):
		d = "quarta"
	elif (d == 4):
		d = "quinta"
	elif (d == 5):
		d = "sexta"
	else:
		d = "sabado"
	elif (d1 == 2):
		d1 = "terca"
	elif (d1 == 3):
		d1 = "quarta"
	elif (d1 == 4):
		d1 = "quinta"
	elif (d1 == 5):
		d1 = "sexta"
	else:
		d1 = "sabado"
	print("Hoje eh",d, "e o dia futuro eh",d1)
else: 
	print("A entrada eh invalida")
-- ERROR:
File "XXXX", line 20
    elif (d1 == 2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:01:35) 
-- CODE:
d = int(input("Qual o dia? "))

if(( d>=0 and d<= 6)):
	j = int(input("Quantos dias? "))
	d1 = (d + j)% 7
	if (d == 0):
		d = "domingo"
	elif (d == 1):
		d = "segunda"
	elif (d == 2):
		d = "terca"
	elif (d == 3):
		d = "quarta"
	elif (d == 4):
		d = "quinta"
	elif (d == 5):
		d = "sexta"
	else:
		d = "sabado"
	elif (d1 == 2):
		d1 = "terca"
	elif (d1 == 3):
		d1 = "quarta"
	elif (d1 == 4):
		d1 = "quinta"
	elif (d1 == 5):
		d1 = "sexta"
	else:
		d1 = "sabado"
	print("Hoje eh",d, "e o dia futuro eh",d1)
else: 
	print("A entrada eh invalida")
-- ERROR:
File "XXXX", line 20
    elif (d1 == 2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:01:44) 
-- CODE:
d = int(input("Qual o dia? "))

if(( d>=0 and d<= 6)):
	j = int(input("Quantos dias? "))
	d1 = (d + j)% 7
	if (d == 0):
		d = "domingo"
	elif (d == 1):
		d = "segunda"
	elif (d == 2):
		d = "terca"
	elif (d == 3):
		d = "quarta"
	elif (d == 4):
		d = "quinta"
	elif (d == 5):
		d = "sexta"
	else:
		d = "sabado"
	elif (d1 == 2):
		d1 = "terca"
	elif (d1 == 3):
		d1 = "quarta"
	elif (d1 == 4):
		d1 = "quinta"
	elif (d1 == 5):
		d1 = "sexta"
	else:
		d1 = "sabado"
	print("Hoje eh",d, "e o dia futuro eh",d1)
else: 
	print("A entrada eh invalida")
-- ERROR:
File "XXXX", line 20
    elif (d1 == 2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:03:09) 
-- CODE:
d = int(input("Qual o dia? "))

if(( d>=0 and d<= 6)):
	j = int(input("Quantos dias? "))
	d1 = (d + j)% 7
	if (d == 0):
		d = "domingo"
	elif (d == 1):
		d = "segunda"
	elif (d == 2):
		d = "terca"
	elif (d == 3):
		d = "quarta"
	elif (d == 4):
		d = "quinta"
	elif (d == 5):
		d = "sexta"
	else:
		d = "sabado"
	if (d1 == 0):
		d1 = "domingo"
	elif(d1 == 1):
		d1 = "segunda"
	elif (d1 == 2):
		d1 = "terca"
	elif (d1 == 3):
		d1 = "quarta"
	elif (d1 == 4):
		d1 = "quinta"
	elif (d1 == 5):
		d1 = "sexta"
	else:
		d1 = "sabado"
	print("Hoje eh",d, "e o dia futuro eh",d1)
else: 
	print("A entrada eh invalida")
-- OUTPUT:
A entrada eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:03:17) 
-- CODE:
d = int(input("Qual o dia? "))

if(( d>=0 and d<= 6)):
	j = int(input("Quantos dias? "))
	d1 = (d + j)% 7
	if (d == 0):
		d = "domingo"
	elif (d == 1):
		d = "segunda"
	elif (d == 2):
		d = "terca"
	elif (d == 3):
		d = "quarta"
	elif (d == 4):
		d = "quinta"
	elif (d == 5):
		d = "sexta"
	else:
		d = "sabado"
	if (d1 == 0):
		d1 = "domingo"
	elif(d1 == 1):
		d1 = "segunda"
	elif (d1 == 2):
		d1 = "terca"
	elif (d1 == 3):
		d1 = "quarta"
	elif (d1 == 4):
		d1 = "quinta"
	elif (d1 == 5):
		d1 = "sexta"
	else:
		d1 = "sabado"
	print("Hoje eh",d, "e o dia futuro eh",d1)
else: 
	print("A entrada eh invalida")
-- OUTPUT:
A entrada eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:03:21) 
-- CODE:
d = int(input("Qual o dia? "))

if(( d>=0 and d<= 6)):
	j = int(input("Quantos dias? "))
	d1 = (d + j)% 7
	if (d == 0):
		d = "domingo"
	elif (d == 1):
		d = "segunda"
	elif (d == 2):
		d = "terca"
	elif (d == 3):
		d = "quarta"
	elif (d == 4):
		d = "quinta"
	elif (d == 5):
		d = "sexta"
	else:
		d = "sabado"
	if (d1 == 0):
		d1 = "domingo"
	elif(d1 == 1):
		d1 = "segunda"
	elif (d1 == 2):
		d1 = "terca"
	elif (d1 == 3):
		d1 = "quarta"
	elif (d1 == 4):
		d1 = "quinta"
	elif (d1 == 5):
		d1 = "sexta"
	else:
		d1 = "sabado"
	print("Hoje eh",d, "e o dia futuro eh",d1)
else: 
	print("A entrada eh invalida")
-- EXECUTION TIME:
0.173422
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:05:17) 
-- CODE:
d = int(input("Qual o dia? "))

if((d>=0 and d<= 6)):
	j = int(input("Quantos dias? "))
	d1 = (d + j)% 7
	if (d == 0):
		d = "domingo"
	elif (d == 1):
		d = "segunda"
	elif (d == 2):
		d = "terca"
	elif (d == 3):
		d = "quarta"
	elif (d == 4):
		d = "quinta"
	elif (d == 5):
		d = "sexta"
	else:
		d = "sabado"
	if (d1 == 0):
		d1 = "domingo"
	elif(d1 == 1):
		d1 = "segunda"
	elif (d1 == 2):
		d1 = "terca"
	elif (d1 == 3):
		d1 = "quarta"
	elif (d1 == 4):
		d1 = "quinta"
	elif (d1 == 5):
		d1 = "sexta"
	else:
		d1 = "sabado"
	print("Hoje eh",d, "e o dia futuro eh",d1)
else: 
	print("A entrada eh",d,"invalida)
-- ERROR:
File "XXXX", line 36
    print("A entrada eh",d,"invalida)
                                    ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:05:26) 
-- CODE:
d = int(input("Qual o dia? "))

if((d>=0 and d<= 6)):
	j = int(input("Quantos dias? "))
	d1 = (d + j)% 7
	if (d == 0):
		d = "domingo"
	elif (d == 1):
		d = "segunda"
	elif (d == 2):
		d = "terca"
	elif (d == 3):
		d = "quarta"
	elif (d == 4):
		d = "quinta"
	elif (d == 5):
		d = "sexta"
	else:
		d = "sabado"
	if (d1 == 0):
		d1 = "domingo"
	elif(d1 == 1):
		d1 = "segunda"
	elif (d1 == 2):
		d1 = "terca"
	elif (d1 == 3):
		d1 = "quarta"
	elif (d1 == 4):
		d1 = "quinta"
	elif (d1 == 5):
		d1 = "sexta"
	else:
		d1 = "sabado"
	print("Hoje eh",d, "e o dia futuro eh",d1)
else: 
	print("A entrada eh",d,"invalida")
-- OUTPUT:
A entrada eh 9 invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:05:31) 
-- CODE:
d = int(input("Qual o dia? "))

if((d>=0 and d<= 6)):
	j = int(input("Quantos dias? "))
	d1 = (d + j)% 7
	if (d == 0):
		d = "domingo"
	elif (d == 1):
		d = "segunda"
	elif (d == 2):
		d = "terca"
	elif (d == 3):
		d = "quarta"
	elif (d == 4):
		d = "quinta"
	elif (d == 5):
		d = "sexta"
	else:
		d = "sabado"
	if (d1 == 0):
		d1 = "domingo"
	elif(d1 == 1):
		d1 = "segunda"
	elif (d1 == 2):
		d1 = "terca"
	elif (d1 == 3):
		d1 = "quarta"
	elif (d1 == 4):
		d1 = "quinta"
	elif (d1 == 5):
		d1 = "sexta"
	else:
		d1 = "sabado"
	print("Hoje eh",d, "e o dia futuro eh",d1)
else: 
	print("A entrada eh",d,"invalida")
-- EXECUTION TIME:
0.143434
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada eh 9 invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:05:33) 
-- CODE:
d = int(input("Qual o dia? "))

if((d>=0 and d<= 6)):
	j = int(input("Quantos dias? "))
	d1 = (d + j)% 7
	if (d == 0):
		d = "domingo"
	elif (d == 1):
		d = "segunda"
	elif (d == 2):
		d = "terca"
	elif (d == 3):
		d = "quarta"
	elif (d == 4):
		d = "quinta"
	elif (d == 5):
		d = "sexta"
	else:
		d = "sabado"
	if (d1 == 0):
		d1 = "domingo"
	elif(d1 == 1):
		d1 = "segunda"
	elif (d1 == 2):
		d1 = "terca"
	elif (d1 == 3):
		d1 = "quarta"
	elif (d1 == 4):
		d1 = "quinta"
	elif (d1 == 5):
		d1 = "sexta"
	else:
		d1 = "sabado"
	print("Hoje eh",d, "e o dia futuro eh",d1)
else: 
	print("A entrada eh",d,"invalida")
-- OUTPUT:
A entrada eh 9 invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:05:50) 
-- CODE:
d = int(input("Qual o dia? "))

if((d>=0 and d<= 6)):
	j = int(input("Quantos dias? "))
	d1 = (d + j)% 7
	if (d == 0):
		d = "domingo"
	elif (d == 1):
		d = "segunda"
	elif (d == 2):
		d = "terca"
	elif (d == 3):
		d = "quarta"
	elif (d == 4):
		d = "quinta"
	elif (d == 5):
		d = "sexta"
	else:
		d = "sabado"
	if (d1 == 0):
		d1 = "domingo"
	elif(d1 == 1):
		d1 = "segunda"
	elif (d1 == 2):
		d1 = "terca"
	elif (d1 == 3):
		d1 = "quarta"
	elif (d1 == 4):
		d1 = "quinta"
	elif (d1 == 5):
		d1 = "sexta"
	else:
		d1 = "sabado"
	print("Hoje eh",d, "e o dia futuro eh",d1)
else: 
	print("A entrada eh",d, "invalida")
-- OUTPUT:
A entrada eh 9 invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:05:54) 
-- CODE:
d = int(input("Qual o dia? "))

if((d>=0 and d<= 6)):
	j = int(input("Quantos dias? "))
	d1 = (d + j)% 7
	if (d == 0):
		d = "domingo"
	elif (d == 1):
		d = "segunda"
	elif (d == 2):
		d = "terca"
	elif (d == 3):
		d = "quarta"
	elif (d == 4):
		d = "quinta"
	elif (d == 5):
		d = "sexta"
	else:
		d = "sabado"
	if (d1 == 0):
		d1 = "domingo"
	elif(d1 == 1):
		d1 = "segunda"
	elif (d1 == 2):
		d1 = "terca"
	elif (d1 == 3):
		d1 = "quarta"
	elif (d1 == 4):
		d1 = "quinta"
	elif (d1 == 5):
		d1 = "sexta"
	else:
		d1 = "sabado"
	print("Hoje eh",d, "e o dia futuro eh",d1)
else: 
	print("A entrada eh",d, "invalida")
-- EXECUTION TIME:
0.174286
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada eh 9 invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:05:56) 
-- CODE:
d = int(input("Qual o dia? "))

if((d>=0 and d<= 6)):
	j = int(input("Quantos dias? "))
	d1 = (d + j)% 7
	if (d == 0):
		d = "domingo"
	elif (d == 1):
		d = "segunda"
	elif (d == 2):
		d = "terca"
	elif (d == 3):
		d = "quarta"
	elif (d == 4):
		d = "quinta"
	elif (d == 5):
		d = "sexta"
	else:
		d = "sabado"
	if (d1 == 0):
		d1 = "domingo"
	elif(d1 == 1):
		d1 = "segunda"
	elif (d1 == 2):
		d1 = "terca"
	elif (d1 == 3):
		d1 = "quarta"
	elif (d1 == 4):
		d1 = "quinta"
	elif (d1 == 5):
		d1 = "sexta"
	else:
		d1 = "sabado"
	print("Hoje eh",d, "e o dia futuro eh",d1)
else: 
	print("A entrada eh",d, "invalida")
-- EXECUTION TIME:
0.16436
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada eh 9 invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:07:37) 
-- CODE:
d = int(input("Qual o dia? "))

if((d>=0 and d<= 6)):
	j = int(input("Quantos dias? "))
	d1 = (d + j)% 7
	if (d == 0):
		d = "domingo"
	elif (d == 1):
		d = "segunda"
	elif (d == 2):
		d = "terca"
	elif (d == 3):
		d = "quarta"
	elif (d == 4):
		d = "quinta"
	elif (d == 5):
		d = "sexta"
	else:
		d = "sabado"
	if (d1 == 0):
		d1 = "domingo"
	elif(d1 == 1):
		d1 = "segunda"
	elif (d1 == 2):
		d1 = "terca"
	elif (d1 == 3):
		d1 = "quarta"
	elif (d1 == 4):
		d1 = "quinta"
	elif (d1 == 5):
		d1 = "sexta"
	else:
		d1 = "sabado"
	print("Hoje eh",d, "e o dia futuro eh",d1)
else: 
	print("A entrada eh",d, "invalida")
-- OUTPUT:
A entrada eh 9 invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:07:56) 
-- CODE:
d = int(input("Qual o dia? "))

if((d>=0 and d<= 6)):
	j = int(input("Quantos dias? "))
	d1 = (d + j)% 7
	if (d == 0):
		d = "domingo"
	elif (d == 1):
		d = "segunda"
	elif (d == 2):
		d = "terca"
	elif (d == 3):
		d = "quarta"
	elif (d == 4):
		d = "quinta"
	elif (d == 5):
		d = "sexta"
	else:
		d = "sabado"
	if (d1 == 0):
		d1 = "domingo"
	elif(d1 == 1):
		d1 = "segunda"
	elif (d1 == 2):
		d1 = "terca"
	elif (d1 == 3):
		d1 = "quarta"
	elif (d1 == 4):
		d1 = "quinta"
	elif (d1 == 5):
		d1 = "sexta"
	else:
		d1 = "sabado"
	print("Hoje eh",d, "e o dia futuro eh",d1)
else: 
	print("A entrada eh",d, "invalida")
-- OUTPUT:
A entrada eh 9 invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:08:39) 
-- CODE:
d = int(input("Qual o dia? "))

if ((d >= 0 and d <= 6)):
	j = int(input("Quantos dias? "))
	d1 = (d + j)% 7
	if (d == 0):
		d = "domingo"
	elif (d == 1):
		d = "segunda"
	elif (d == 2):
		d = "terca"
	elif (d == 3):
		d = "quarta"
	elif (d == 4):
		d = "quinta"
	elif (d == 5):
		d = "sexta"
	else:
		d = "sabado"
	if (d1 == 0):
		d1 = "domigo"
	elif (d1 == 1):
		d1 = "segunda"
	elif (d1 == 2):
		d1 = "terca"
	elif (d1 == 3):
		d1 = "quarta"
	elif (d1 == 4):
		d1 = "quinta"
	elif (d1 == 5):
		d1 = "sexta"
	else:
		d1 = "sabado"
	print("Hoje eh",d, "e o dia futuro eh",d1)
else:
	print("A entrada",d, "eh invalida")
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:08:44) 
-- CODE:
d = int(input("Qual o dia? "))

if ((d >= 0 and d <= 6)):
	j = int(input("Quantos dias? "))
	d1 = (d + j)% 7
	if (d == 0):
		d = "domingo"
	elif (d == 1):
		d = "segunda"
	elif (d == 2):
		d = "terca"
	elif (d == 3):
		d = "quarta"
	elif (d == 4):
		d = "quinta"
	elif (d == 5):
		d = "sexta"
	else:
		d = "sabado"
	if (d1 == 0):
		d1 = "domigo"
	elif (d1 == 1):
		d1 = "segunda"
	elif (d1 == 2):
		d1 = "terca"
	elif (d1 == 3):
		d1 = "quarta"
	elif (d1 == 4):
		d1 = "quinta"
	elif (d1 == 5):
		d1 = "sexta"
	else:
		d1 = "sabado"
	print("Hoje eh",d, "e o dia futuro eh",d1)
else:
	print("A entrada",d, "eh invalida")
-- EXECUTION TIME:
0.185297
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
